# pyproject-indirect-import-detector

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.circleci/: config.yml
src/poetry_indirect_import_detector/: detector.py  domain.py  exception.py  main.py  pyproject.py
src/pyproject_indirect_import_detector/: detector.py  domain.py  main.py  pyproject.py  result.py  util.py
tests/: test_poetry_indirect_import_detector.py
tests/integration_test/: test_output.py
tests/integration_test/case/ng_exclude_modules/: output-v.txt  output.txt  pyproject.toml
tests/integration_test/case/ng_exclude_modules/tests/unit/: example_crlf_file.py
tests/integration_test/case/ng_exclude_projects/: pyproject.toml
tests/integration_test/case/ng_exclude_projects/src/hoge/: __init__.py
tests/integration_test/case/ng_pillow_missing/: error.txt  output-v.txt  output.txt  pyproject.toml
tests/integration_test/case/ng_pillow_missing/src/hoge/: __main__.py
tests/integration_test/case/ng_test_cannot_check_import_problem/: README.md  output-v.txt  output.txt  pyproject.toml
tests/integration_test/case/ng_test_cannot_check_import_problem/src/hoge/: __main__.py
tests/integration_test/case/ng_test_cannot_check_import_problem/tests/: check_hoge.py
tests/integration_test/case/ok_exclude_modules/: output-v.txt  pyproject.toml
tests/integration_test/case/ok_exclude_projects/: output-v.txt  output.txt  pyproject.toml
tests/integration_test/case/ok_gi_import/: output-v.txt  output.txt  pyproject.toml
tests/integration_test/case/ok_gi_import/src/hoge/: __main__.py
tests/unit_test/: test_detector.py  test_domain.py  test_pyproject.py
