[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyproject-indirect-import-detector"
version = "0.1.0"
description = ""
authors = ["keno <keno.ss57@gmail.com>"]
packages = [
    {from = "src", include = "pyproject_indirect_import_detector"},
]

[tool.poetry.scripts]
pyproject-indirect-import-detector = "pyproject_indirect_import_detector.main:_main"

[tool.poetry.dependencies]
python = "^3.9"

result = "^0.6.0"
setuptools = "^56.0.0"
stdlib-list = "^0.8.0"
termcolor = "^1.1.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
Pillow = "^8.2.0"
PyGObject = "^3.40.1"
actfw-core = "^1.5.2"
pysen = {version = "^0.9.1", extras = ["lint"]}
pytest = "^5.2"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 128
py_version = "py38"

[[tool.pysen.lint.mypy_targets]]
paths = ["src"]
