[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hoge"
version = "0.1.0"
description = ""
authors = ["keno <keno.ss57@gmail.com>"]
packages = [
    {from = "src", include = "hoge"},
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.pyproject-indirect-import-detector]
exclude_modules = [
    "a", # For test; dummy module.
    "b", # Ditto.
]
